--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "buildpacks": [
     {
-      "url": "mars/create-react-app"
+      "url": "https://github.com/mars/create-react-app-buildpack.git"
     }
   ]
 }
